# tiny-x86os

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
.reuse/: dep5
newlib/i686-elf/include/: _ansi.h  _newlib_version.h  _syslist.h  alloca.h  ar.h  argz.h  assert.h  complex.h  cpio.h  ctype.h  devctl.h  dirent.h  elf.h  envlock.h  envz.h  errno.h  fastmath.h  fcntl.h  fenv.h  fnmatch.h  ftw.h  getopt.h  glob.h  grp.h  iconv.h  ieeefp.h  inttypes.h  langinfo.h  libgen.h  limits.h  locale.h  malloc.h  math.h  memory.h  ndbm.h  newlib.h  paths.h  pthread.h  pwd.h  reent.h  (+26 more)
newlib/i686-elf/include/machine/: _arc4random.h  _default_types.h  _endian.h  _time.h  _types.h  ansi.h  endian.h  fastmath.h  ieeefp.h  malloc.h  param.h  setjmp-dj.h  setjmp.h  stdlib.h  termios.h  time.h  types.h
newlib/i686-elf/include/ssp/: ssp.h  stdio.h  stdlib.h  string.h  strings.h  unistd.h  wchar.h
newlib/i686-elf/include/sys/: _default_fcntl.h  _intsup.h  _locale.h  _pthreadtypes.h  _sigset.h  _stdint.h  _timespec.h  _timeval.h  _types.h  _tz_structs.h  cdefs.h  config.h  custom_file.h  dir.h  dirent.h  errno.h  fcntl.h  features.h  fenv.h  iconvnls.h  lock.h  param.h  queue.h  reent.h  resource.h  sched.h  select.h  signal.h  stat.h  stdio.h  string.h  syslimits.h  time.h  timeb.h  times.h  timespec.h  tree.h  types.h  unistd.h  utime.h  (+1 more)
newlib/i686-elf/lib/: cygmon.ld  nosys.specs
src/applib/: CMakeLists.txt  cRuntime0.S  cStart.c  lib_syscall.c  lib_syscall.h
src/apps/uname/: CMakeLists.txt  link.lds  main.c  main.h
src/boot/: CMakeLists.txt  boot.c  start.S
src/comm/: boot_info.h  cpu_instr.h  elf.h  types.h
src/kernel/: CMakeLists.txt  kernel.lds
src/kernel/acpi/: poweroff.c  reboot.c
src/kernel/core/: memory.c  syscall.c  task.c
src/kernel/cpu/: cpu.c  irq.c
src/kernel/dev/: console.c  dev.c  disk.c  keyboard.c  timer.c  tty.c
src/kernel/fs/: file.c  fs.c
src/kernel/fs/devfs/: devfs.c
src/kernel/fs/fatfs/: fatfs.c
src/kernel/include/: os_cfg.h
src/kernel/include/acpi/: poweroff.h  reboot.h
src/kernel/include/core/: memory.h  syscall.h  task.h
src/kernel/include/cpu/: cpu.h  irq.h  mmu.h
src/kernel/include/dev/: console.h  dev.h  disk.h  keyboard.h  timer.h  tty.h
src/kernel/include/fs/: file.h  fs.h
src/kernel/include/fs/devfs/: devfs.h
src/kernel/include/fs/fatfs/: fatfs.h
src/kernel/include/ipc/: mutex.h  sem.h
src/kernel/include/tools/: bitmap.h  klib.h  list.h  log.h
src/kernel/init/: first_task.c  first_task_entry.S  init.c  init.h  lib_syscall.c  start.S
src/kernel/ipc/: mutex.c  sem.c
src/kernel/tools/: bitmap.c  klib.c  list.c  log.c
src/loader/: CMakeLists.txt  loader.h  loader_16.c  loader_32.c  start.S
src/shell/: CMakeLists.txt  link.lds  main.c  main.h  md5.c  md5.h  tools.h
